Fixed text overflow for both Title and Description

--- a/app.css
+++ b/app.css
@@ -1,10 +1,19 @@
 .noteCard{
     height: 350px;
 }
+
+.cut-title{
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical; 
+    overflow: hidden;
+}
+
 .cut-text {
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 8;
+    -webkit-line-clamp: 7;
     -webkit-box-orient: vertical; 
     overflow: hidden;
 }
